--- a/less/theme.less
+++ b/less/theme.less
@@ -13,7 +13,9 @@
 
 // Add CSS Customizations to your theme here.
 
-@import url(http://fonts.googleapis.com/css?family=Dosis:200,300,400,600|Signika+Negative:300,400,600|Exo:300,400,600|Roboto:100,400,300,700|Sintony:400,700);
+@font-subsets: "latin,cyrillic-ext,cyrillic,latin-ext";
+// @import url(http://fonts.googleapis.com/css?family=Dosis:200,300,400,600|Signika+Negative:300,400,600|Exo:300,400,600|Roboto:100,400,300,700|Sintony:400,700);
+@import ~"url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,700|Sintony:400,700&subset=@{font-subsets})";
 
 // @font-family-sans-serif: 'Dosis', sans-serif;
 // @font-family-sans-serif: 'Signika Negative', sans-serif;
@@ -21,14 +23,44 @@
 // @font-family-sans-serif: 'Roboto', sans-serif;
 @font-family-sans-serif: 'Sintony', sans-serif;
 
-@headings-font-family:    'Roboto';
+@headings-font-family:    'Roboto', sans-serif;
 @headings-font-weight:    300;
 @headings-line-height:    1.3;
 
 
-body{
+.corporate-background{
 	background: url(../assets/background_tile.jpg) fade(@gray-light,60%);
 	background-blend-mode: screen;
+}
+
+a{	
+	font-weight: 700;
+	&:visited{
+		color: @brand-secondary;
+		&:hover{
+			color: @link-hover-color;
+		}
+	}
+	.nabvar &,
+	.list-group &,
+	.dropdown-menu &,
+	.pagination &,
+	&.btn
+	{
+		&:visited{
+			color: @link-color;
+		}
+	}
+	&.list-group-item:visited{
+		color: @list-group-link-color
+	}
+	&.list-group-item.active:visited,
+	&.list-group-item:active:visited{
+		color: @list-group-active-color;
+	}
+	&:hover, &:focus{
+		text-decoration: none;
+	}
 }
 
 .hexagon-container {
@@ -136,9 +168,9 @@ body{
   border: 0;
   border-radius: @btn-border-radius;
   position: relative;
-  transition: padding 0.2s;
+  // transition: all 0.2s;
   &:before{
-  	transition: border 0.2s;
+  	transition: border 0.25s;
 	  content: " ";
 	  position: absolute;
 	  top: 0;
@@ -146,19 +178,17 @@ body{
 	  right: 0;
 	  bottom: 0;
 	  border: 1px solid @brand-primary;
+	  border-bottom-width: 0.15em;
   }
     &:hover,
   	&:focus,
   	&:active,
   	&.active,
     .open .dropdown-toggle& {
-    	&:not(.btn-link){
-		  	padding-right: 1.1em;
-		  	padding-left: 1.1em;
-		    &:before{
-			  border-width:  3px;
+    	&:not(.btn-link):before{
+			  border-top-width:  0.2em;
+			  border-bottom-width:  1px;
 			}
-		}
 	  }
 	&:active,
   	&.active,
@@ -231,4 +261,15 @@ h1, h2, h3, h4, h5, h6,
   	font-size: 0.65em;
     font-weight: @headings-small-font-weight;
   }
+}
+
+
+
+.navbar-default-alt{
+	background-color: lighten(desaturate(@brand-primary,30%),14%);
+	border-color: lighten(desaturate(@brand-primary,30%),14%);
+}
+.navbar-inverse-alt{
+	background-color: lighten(desaturate(@brand-secondary,55%),14%);
+	border-color: lighten(desaturate(@brand-secondary,55%),14%);
 }
