--- a/less/lobes-navbars.less
+++ b/less/lobes-navbars.less
@@ -137,7 +137,7 @@
 }
 body.MetaBrainz .navbar,
 .navbar.MetaBrainz{
-  .navbar-variant(white,@green);
+  .navbar-variant(white,#009213); // Original @green replaced
 }
 body.MusicBrainz .navbar,
 .navbar.MusicBrainz{
