--- a/less/links.less
+++ b/less/links.less
@@ -9,8 +9,11 @@ a{
     }
     &:visited:not(.btn){
         color: @link-visited-color;
+        &:hover{
+            color: @link-visited-hover-color;
+        }
     }
-    
+
     // Exceptions to :visited state
     &.list-group-item:visited{
         color:@list-group-link-color;
@@ -18,6 +21,9 @@ a{
         &.active:hover,
         &.active:focus {
             color: @list-group-active-color;
+        }
+        &:hover{  
+            color:@list-group-link-color;
         }
     }
     .navbar-default &.navbar-brand:visited{
