Reset margin for navbar forms (eg: search)

--- a/less/lobes-navbars.less
+++ b/less/lobes-navbars.less
@@ -150,6 +150,9 @@
       color: @active-color;
     }
   }
+  .navbar-form{
+    margin: 0;
+  }
   .support-link > a{
     color: @active-color !important;
     background-color: @color;
