--- a/less/theme.less
+++ b/less/theme.less
@@ -14,6 +14,7 @@
 @import "links.less";
 @import "lobes-buttons.less";
 @import "lobes-navbars.less";
+@import "carousel-control.less";
 
 // Add CSS Customizations to your theme here.
 
