--- a/less/carousel-control.less
+++ b/less/carousel-control.less
@@ -2,7 +2,7 @@
 @animation-speed : 0.45s;
 
 .metaCarousel{
-	&:not(.iHaveJavascript){
+	&:not(.iHaveJavasript){
 		.item:not(.active){
 			&, & *{
 				display: none;
